--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       serviceAccountName: kubeconsole-controller
       containers:
-        - image: lisinge/kubeconsole-controller:v0.0.9
+        - image: lisinge/kubeconsole-controller:latest
           name: kubeconsole-controller
           resources:
             requests:
